[gd_scene load_steps=20 format=3 uid="uid://btsg3docvgbyo"]

[ext_resource type="Texture2D" uid="uid://c26fhe60u5ehp" path="res://Scenes/GridSmall.png" id="1_6phgx"]
[ext_resource type="Script" uid="uid://cshks5b3ok4yw" path="res://Scripts/level.gd" id="1_ha31o"]
[ext_resource type="PackedScene" uid="uid://c4des1o4sspp7" path="res://Scenes/wall_long.tscn" id="2_qxfql"]
[ext_resource type="PackedScene" uid="uid://bx75p5vjbt2jd" path="res://Scenes/player_character.tscn" id="2_wqkje"]
[ext_resource type="PackedScene" uid="uid://d0brvqlhys372" path="res://Scenes/turret.tscn" id="3_81xng"]
[ext_resource type="PackedScene" uid="uid://u05x500bowe6" path="res://Scenes/wall_a.tscn" id="3_ha31o"]
[ext_resource type="PackedScene" uid="uid://pg8287wb4urq" path="res://Scenes/wall_b.tscn" id="4_pa6b8"]
[ext_resource type="PackedScene" uid="uid://bkf5tgeuv57s6" path="res://Scenes/Heatsink.tscn" id="5_0f350"]
[ext_resource type="PackedScene" uid="uid://ciukhcxkmbhud" path="res://Scenes/capacitor.tscn" id="6_8c0lf"]
[ext_resource type="PackedScene" uid="uid://di6jug457l4fu" path="res://Scenes/switch.tscn" id="6_754fn"]
[ext_resource type="PackedScene" uid="uid://cajd4tl3cp1v3" path="res://Scenes/door.tscn" id="7_bvt00"]
[ext_resource type="PackedScene" uid="uid://ovetpaulfpm" path="res://Assets/LaserBase.glb" id="8_754fn"]
[ext_resource type="PackedScene" uid="uid://cylst2gpaimub" path="res://Scenes/level_up.tscn" id="8_pa6b8"]
[ext_resource type="PackedScene" uid="uid://bw7b4nw6lhmlb" path="res://Scenes/fan.tscn" id="14_crh0w"]

[sub_resource type="BoxMesh" id="BoxMesh_oi3di"]
size = Vector3(10, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oi3di"]
albedo_color = Color(0, 0.658824, 0, 1)
albedo_texture = ExtResource("1_6phgx")
uv1_scale = Vector3(10, 10, 10)
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_f2txt"]
size = Vector2(20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_1ainy"]
size = Vector3(20, 1, 20)

[sub_resource type="Environment" id="Environment_0b4ue"]
background_mode = 1
ambient_light_source = 2
ambient_light_energy = 0.0
tonemap_mode = 2
glow_enabled = true

[node name="Level" type="Node3D"]
script = ExtResource("1_ha31o")

[node name="DeadTimer" type="Timer" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 63.7507, 36.5403)
fov = 15.0
size = 19.0
near = 50.0
far = 90.0

[node name="PlayerCharacter" parent="." instance=ExtResource("2_wqkje")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.5, 9)

[node name="Turret2" parent="." instance=ExtResource("3_81xng")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.5, -3.5)
rotation_speed = 300

[node name="Turret3" parent="." instance=ExtResource("3_81xng")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -6.5)
rotation_speed = 300

[node name="Turret4" parent="." instance=ExtResource("3_81xng")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 7.5)
rotation_speed = 300

[node name="Disipador" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 0.5, -9.5)

[node name="Disipador3" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, -9.5)

[node name="Disipador5" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 1.5)

[node name="Disipador6" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 1.5)

[node name="Disipador7" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 1.5)

[node name="Disipador8" parent="." instance=ExtResource("5_0f350")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 1.5)

[node name="Capacitor" parent="." instance=ExtResource("6_8c0lf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 2.5)

[node name="Capacitor3" parent="." instance=ExtResource("6_8c0lf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, -6.5)

[node name="Switch" parent="." instance=ExtResource("6_754fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, 7.5)

[node name="Switch2" parent="." instance=ExtResource("6_754fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.5, 3.5)

[node name="Door" parent="." instance=ExtResource("7_bvt00")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, 4.5)

[node name="LevelUp" parent="." instance=ExtResource("8_pa6b8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, -10.5)

[node name="Door2" parent="." instance=ExtResource("7_bvt00")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 1.5)

[node name="LaserBase2" parent="." instance=ExtResource("8_754fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0, 7.5)

[node name="LaserBase4" parent="." instance=ExtResource("8_754fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.05, -6.5)

[node name="LaserBase3" parent="." instance=ExtResource("8_754fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -3.5)

[node name="LevelDesign" type="Node3D" parent="."]

[node name="wall" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, -10.5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall3" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.5, 0.5, -5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall4" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.5, 0.5, 5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall5" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.5, 0.5, -5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall6" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.5, 0.5, 5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall2" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, -10.5)
visible = false
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall7" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, 10.5)
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="wall8" type="CSGMesh3D" parent="LevelDesign"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 10.5)
use_collision = true
collision_layer = 4
collision_mask = 7
mesh = SubResource("BoxMesh_oi3di")

[node name="WallLong" parent="LevelDesign" instance=ExtResource("2_qxfql")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 4.5)

[node name="WallLong2" parent="LevelDesign" instance=ExtResource("2_qxfql")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.5, 0, 9)

[node name="WallLong3" parent="LevelDesign" instance=ExtResource("2_qxfql")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0, -0.5)

[node name="WallLong4" parent="LevelDesign" instance=ExtResource("2_qxfql")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0, -7.5)

[node name="WallA" parent="LevelDesign" instance=ExtResource("3_ha31o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 4.5)

[node name="WallA2" parent="LevelDesign" instance=ExtResource("3_ha31o")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.5, 0, 9.5)

[node name="WallA3" parent="LevelDesign" instance=ExtResource("3_ha31o")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.5, 0, -3.5)

[node name="WallA4" parent="LevelDesign" instance=ExtResource("3_ha31o")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.5, 0, 5.5)

[node name="WallB" parent="LevelDesign" instance=ExtResource("4_pa6b8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 5.5)

[node name="WallB2" parent="LevelDesign" instance=ExtResource("4_pa6b8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.5, 0, 6.5)

[node name="WallB3" parent="LevelDesign" instance=ExtResource("4_pa6b8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0, 4.5)

[node name="WallB5" parent="LevelDesign" instance=ExtResource("4_pa6b8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.5, 0, 1.5)

[node name="WallB4" parent="LevelDesign" instance=ExtResource("4_pa6b8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.5, 0, -1.5)

[node name="Floor" type="StaticBody3D" parent="LevelDesign"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="LevelDesign/Floor"]
material_override = SubResource("StandardMaterial3D_oi3di")
mesh = SubResource("PlaneMesh_f2txt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelDesign/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_1ainy")

[node name="Environment" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0.457397, 0.491482, -0.741103, -0.191909, 0.868308, 0.457397, 0.868308, -0.0669873, 0.491481, -8.00016, 2.99942, 8.9994)
light_color = Color(0.347051, 0.490634, 0.278333, 1)
light_energy = 50.0
shadow_enabled = true
shadow_reverse_cull_face = true
shadow_opacity = 0.8
shadow_blur = 3.0
spot_range = 18.0
spot_angle = 47.3896

[node name="SpotLight3D2" type="SpotLight3D" parent="Environment"]
transform = Transform3D(-0.290558, 0.394897, -0.871569, -0.191909, 0.868308, 0.457397, 0.937415, 0.300163, -0.176509, -8.00016, 2.99942, -4.5006)
light_color = Color(0.616335, 0.285092, 0.655235, 1)
light_energy = 50.0
shadow_enabled = true
shadow_reverse_cull_face = true
shadow_opacity = 0.8
shadow_blur = 3.0
spot_range = 18.0
spot_angle = 47.3896

[node name="SpotLight3D3" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0.523278, -0.303753, 0.796187, -0.191909, 0.868308, 0.457397, -0.830272, -0.392142, 0.396074, 9.49984, 3.49942, -0.000600815)
light_color = Color(0.347051, 0.490634, 0.278333, 1)
light_energy = 50.0
shadow_enabled = true
shadow_reverse_cull_face = true
shadow_opacity = 0.8
shadow_blur = 3.0
spot_range = 18.0
spot_angle = 47.3896

[node name="SpotLight3D4" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0.523278, -0.303753, 0.796187, -0.191909, 0.868308, 0.457397, -0.830271, -0.392142, 0.396074, 10.4998, 3.49942, 7.9994)
light_color = Color(0.616335, 0.285092, 0.655235, 1)
light_energy = 50.0
shadow_enabled = true
shadow_reverse_cull_face = true
shadow_opacity = 0.8
shadow_blur = 3.0
spot_range = 18.0
spot_angle = 47.3896

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.577247, 0.461816, -0.673433, -0.12941, 0.866025, 0.482963, 0.80625, -0.19164, 0.559674, -9.07185, 8.40136, 8.68972)
light_color = Color(0.216723, 0.555139, 0.783638, 1)
light_energy = 0.5

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.625798, -0.242551, 0.741313, 0.0244025, 0.956043, 0.292209, -0.779603, -0.164774, 0.604209, 11.9489, 5.39513, 1.79185)
light_color = Color(0.624278, 0.508981, 0.247576, 1)
light_energy = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_0b4ue")

[node name="Fan2" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, 10)

[node name="Fan3" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, 6)

[node name="Fan4" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, 2)

[node name="Fan5" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, -2)

[node name="Fan6" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, -6)

[node name="Fan12" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -10)

[node name="Fan13" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -10)

[node name="Fan14" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -10)

[node name="Fan7" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, -10)

[node name="Fan8" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, -6)

[node name="Fan9" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, -2)

[node name="Fan10" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 2)

[node name="Fan11" parent="." instance=ExtResource("14_crh0w")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 6)

[connection signal="level_up" from="." to="LevelUp" method="_level_up"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="player_killed" from="PlayerCharacter" to="." method="_player_killed"]
[connection signal="turret_killed" from="Turret2" to="." method="_on_turret_turret_killed"]
[connection signal="turret_killed" from="Turret3" to="." method="_on_turret_turret_killed"]
[connection signal="turret_killed" from="Turret4" to="." method="_on_turret_turret_killed"]
[connection signal="body_entered" from="Switch" to="Door" method="_on_body_entered"]
[connection signal="body_entered" from="Switch2" to="Door2" method="_on_body_entered"]
